[package]
name = "vector"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
rand = "0.8"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "bitset"
harness = false

[[bench]]
name = "except"
harness = false

[[bench]]
name = "intersect"
harness = false

[[bench]]
name = "iter"
harness = false

[[bench]]
name = "union"
harness = false

[[bench]]
name = "vector"
harness = false
